--- a/frontEnd/src/Components/Admin/CSS/Table.css
+++ b/frontEnd/src/Components/Admin/CSS/Table.css
@@ -14,9 +14,9 @@
   background-color: #f2f2f2;
 }
 
-#css-table tr:hover {
+/* #css-table tr:hover {
   background-color: #ddd;
-}
+} */
 
 #css-table th {
   padding-top: 12px;
