--- a/frontEnd/src/Components/Admin/CSS/Form.css
+++ b/frontEnd/src/Components/Admin/CSS/Form.css
@@ -1,4 +1,4 @@
-input[type="text"],
+input[type="text"],[type="password"],
 select {
   width: 100%;
   padding: 12px 20px;
@@ -8,6 +8,8 @@ select {
   border-radius: 4px;
   box-sizing: border-box;
 }
+
+
 
 input[type="submit"] {
   width: 100%;
@@ -23,9 +25,3 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: #45a049;
 }
-
-/* div {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-} */
